
* Updated framework wrappers for the API changes in the SDK shipped with
  Xcode 8.3.2.

* Added new framework wrapper: "pyobjc-framework-CoreServices".

  This exposes no new functionality for now, but makes it possible to access
  the functionality exposed by the "CoreServices" framework by using "import
  CoreServices", instead of directly importing the name of the subframework.

Bugfixes:

* The OC_Python* Objective-C classes used to expose Python objects to
  Objective-C don't support secure coding, added a
  "supportsSecureCoding" implementation to make this explicit.

* Issue #182: The block signature registered in the ObjC runtime
  datastructures for Python blocks was wrong, which confuses Objective-C
  code that looks at the runtime data.

* Fix requirement info in Collaboration setup.py.

  Patch by Alex Chekunkov.

* Issue #189: Invalid invocation of "atos" command on recent macOS versions

  The Objective-C exception logging code in pyobjc-framework-ExceptionHandling
  calls out to the "atos" command to get readable stack traces, that
  invocation caused problems on recent macOS versions.


Version 3.2.2
-------------

Bugfixes:

* Issue #162: Fix conversion of unicode python string to Objective-C "UniChar"
  array, it used to do the wrong thing when converting characters outside of
  the BMP.

  Fix by Ted Morin and Benoit Pierre.

Version 3.2.1
-------------

Updates:

* Small change to the shared setup.py code for framework wrappers to allow
  building wheels for wrappers without a C exention on any system.

  This was mostly done to make it easier to provide wheels in future releases.

Bugfixes:

* Avoid build error with Python 2.7 when using the OSX 10.12 SDK, triggered
  when Python was build using MacPython support.

* Compatibility definitions for MAC_OS_X_VERSION_10_10, MAC_OS_X_VERSION_10_11
  and MAC_OS_X_VERSION_10_12 were wrong, adjusted these.

* Fix obscure crash in test suite of pyobjc-core: the definition of a class